--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon main.js",
-    "start": "node generation-data.js && node main.js",
+    "start": "node main.js",
     "generation-data": "node generation-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
